test/good/functions/lambda17.px

Int->Float f = 2*_
print f(5)

f = _/2
print f(5)
