test/bad/lambdas/call02.px

Int->Int f = _
f(1, 2)
